# dioxus_hello

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  convert_icons.sh
DOCS/: README.md  SLEET_DESIGN.md  android.md  iOS.md
src/: account_selector.rs  app.rs  greeting_updater.rs  greeting_viewer.rs  main.rs  near_credentials.rs
src/css/: account_selector.css  app.css  greeting_updater.css  greeting_viewer.css  hello.css  main.css
