[package]
name = "hello"
version = "0.1.0"
authors = ["The SunShining <thesunshiningmin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop", "router"] }
dirs = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
near-jsonrpc-client = "0.7.0"
near-primitives = "0.17.0"
base64 = "0.21.4"
toml = "0.8.2"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
