[package]
name = "hello"
version = "0.1.0"
authors = ["The SunShining <thesunshiningmin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop", "router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
dirs = "5.0.1"
near-jsonrpc-client = "0.7.0"
near-jsonrpc-primitives = "0.19.0"
near-primitives = "0.19.0"
borsh = "1.1.0"
near-crypto = "0.19.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
